feat(infra-mq): add RabbitMQ tests, envelope wrappers and observability
- implement MessageEnvelope, PublishResult and PublishFailure
- add RabbitMqIntegrationTest and update ManagedMessageListener
- add MicrometerMqMetrics for observability